# rust-api-handler

./: ANALYSIS.md  Cargo.toml  README.md  build.rs  flake.nix
api/: Cargo.toml  greet.rs  hello.js  pygreet.py  rbgreet.rb  thebest.ts  time.js  users.js
api/users/: [id].js
examples/ai-startup/: README.md
examples/ai-startup/api/: health.js
examples/ai-startup/api/agents/: orchestrator.py
examples/ai-startup/api/chat/: completion.py
examples/ai-startup/api/embeddings/: generate.py
examples/ai-startup/api/models/: list.js
examples/fintech/: handler.sh
examples/fintech/api/market/: prices.js
examples/fintech/api/portfolio/: analyze.py  optimize.py  risk.py
examples/fintech/api/trades/: execute.js
examples/fintech/api/watchlist/: manage.js
src/: js_runtime.rs  main.rs  modules.rs  rs_runtime.rs
src/runtimes/: js_runtime.rs  mod.rs
tmp/: hello.js  tmp_hello.js  tmp_thebest.ts  tmp_tstemplate.ts
