[package]
name = "rust-api-handler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

api_dir = { path = "./api" }

metacall = "0.5.4"

[build-dependencies]
metacall-sys = "0.1.2"

[workspace]
members = ["api"]
